--- a/style.css
+++ b/style.css
@@ -1,4 +1,33 @@
-*{
-    margin: 0;
-    padding: 0;
+*
+*
+{
+margin: 0;
+padding: 0;
+}
+
+html,
+body
+{
+height: 100vh;
+font-family: 'Poppins';
+color: white;
+font-size: 1.2rem;
+}
+
+.webgl
+{
+position: fixed;
+top: 0;
+left: 0;
+outline: none;
+}
+.container{
+    position: absolute;
+    z-index: 1;
+    left: 50%;
+    top: 50%;
+    transform:translate(-50%, -50%);
+}
+h1{
+    text-align: center;
 }
